	  with the specified types and Source ID are delivered.  Affected
	  files are lib/silccore/silcpacket.[ch].

	* Fixed file transfer disconnection crash when closing the session
	  directly in the monitor callback after disconnection.  Affected
	  file is lib/silcclient/client_ftp.c.

	* Make Toolkit compile on WIN32.  Affected files in win32/
	  and in lib/silcutil/win32/.

Mon May  7 18:18:48 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed CMODE channel auth public key retrieval.  Affected
	  file is lib/silcclient/command.c.

	* Fixed CMODE command reply to return channel public keys
	  correctly.  Affected files are lib/silcclient/command_reply.c
	  and client_channel.c.

Sun May  6 12:43:19 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Added current channel key cipher name and HMAC name to
	  SilcChannelEntry.  Fixed channel private key creation.
	  Affected files are lib/silcclient/client_channel.c,
	  client_entry and silcclient_entry.h.

	* Allow formatted nicknames as input to silc_client_get_clients
	  and silc_client_get_clients_whois.  Affected file is
	  lib/silcclient/client_entry.c.

	* Fixed silc_message_payload_free crash.  Affected file is
	  lib/silccore/silcmessage.c.

	* Added SILC_STATUS_ERR_NO_SUCH_PUBLIC_KEY to
	  lib/silccore/silcstatus.h.

Thu May  3 18:07:50 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Imported libtommath 0.41.  Renamed all mp_* functions to
	  tma_mp_* functions to avoid rare linking problems on systems
	  with mp_* functions.  Affected files are in lib/silcmath/.

Wed May  2 17:46:25 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* SILC Toolkit 1.1 Beta1.

Wed May  2 11:38:17 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Set the server and router operator modes to local entry after
	  successful OPER or SILCOPER commands.  Affected file is
	  lib/silcclient/command_reply.c.

Tue May  1 14:17:06 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
