@@ -18,6 +18,11 @@ Tue May  8 18:13:38 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
 	* Make Toolkit compile on WIN32.  Affected files in win32/
 	  and in lib/silcutil/win32/.
 
+	* Changed silc_compare_timeval to return negative, zero or
+	  positive instead of just TRUE or FALSE.  This fixes 0 timeout
+	  task dispatching on Windows.  Affected files are
+	  lib/silcutil/silctime.[ch] and silcschedule.c.
+
 Mon May  7 18:18:48 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
 
 	* Fixed CMODE channel auth public key retrieval.  Affected
